# opengl-rust-game

./: .gitignore  Cargo.toml  README.md  build.rs
assets/shaders/: triangle.vert
lib/gl/: Cargo.toml  build.rs
lib/gl/src/: lib.rs
src/: main.rs  render_gl.rs  resources.rs  triangle.vert
